# ECE422-SecureFileSystem

./: .gitignore  CMakeLists.txt  Makefile  README.md  package.json
client/: CMakeLists.txt  Dockerfile
client/certs/: README.md  ca-cert.pem
client/include/: cli_utils.h  client.h  encryption.h  file_utils.h  session.h
client/src/: cli.c  cli_utils.c  cli_utils.h  client.c  encryption.c  file_utils.c  main.c  session.c  session.h
common/: CMakeLists.txt
common/include/: common_encryption.h  http.h  tls.h
common/src/: common_encryption.c  http.c  http_messages.c  tls.c
docs/: cli_guide.md  client_actions.md  db.md
docs/demo_inputs/: alice_file_demo.txt  alice_group_setup.txt  alice_integrity_login.txt  alice_register_and_login.txt  bob_group_demo.txt  bob_register_and_login.txt  charlie_non_member_demo.txt  shell_at_rest_checks.txt  shell_corrupt_one_file.txt
scripts/: test_acceptance_requirements.sh  test_db.sh  test_server_directory_ops.sh  test_server_file_rw.sh  test_server_group_sharing.sh  test_server_groups.sh  test_server_wrapped_fek.sh
server/: CMakeLists.txt  Dockerfile
server/db/init/: 001-schema.sql
server/deploy/: .env.example  docker-compose.yaml
server/deploy/secrets/: README.md  server-cert.pem
server/deploy/storage/sqlite_data/: sfs.db
server/include/: auth.h  db.h  encryption.h  handlers.h  permissions.h  routes.h  routing.h  schema_helper.h  server.h  server_context.h  storage.h
server/src/: auth.c  dev_seed_user.c  encryption.c  example.c  main.c  permissions.c  routes.c  server.c  server_context.c  storage.c
server/src/db/: db.c  schema_helper.c
server/src/handlers/: file_crud.c  group_crud.c  user_auth.c
server/src/routing/: routing.c
tests/: db_wrapper_test.c
